--- a/demo/html5-page/index.html
+++ b/demo/html5-page/index.html
@@ -4,12 +4,12 @@
   <head>
 		<meta charset="utf-8">
 		<title>HTML ?</title>
-		<link href="main.css" rel="stylesheet"  media="screen" type="text/css">
 		<script>
 		var __adobewebfontsappname__="dreamweaver"
 		</script>
 		<script src="http://use.edgefonts.net/bad-script:n4:default.js" type="text/javascript"></script>
 		<link href="//cedced19.github.io/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
+		<style>@charset "utf-8";body{margin:0;color:#151515;font-family:"Gill Sans","Gill Sans MT","Myriad Pro","DejaVu Sans Condensed",Helvetica,Arial,sans-serif;background-color:#EFF5F8}#wrapper{width:100%;min-width:740px;max-width:1000px;margin-left:auto;margin-right:auto;background-color:#FFF;font-family:bad-script;font-style:normal;font-weight:400}#top{overflow:hidden;float:left;color:#FFF}h1{font-size:72px;margin-top:0;margin-bottom:0;text-align:center;text-transform:capitalize}h2{margin-top:.5em}#main{width:58%;margin-left:2%;float:left}#sidebar{width:34%;margin-left:4%;float:right}figure{display:block;width:420px}figure img{padding:10px;-webkit-box-shadow:1px 1px 15px #999;box-shadow:1px 1px 15px #999}figcaption{font-size:.875em;font-weight:700;text-align:center;display:block;margin-top:.5em}.centered{margin-left:auto;margin-right:auto}.floatleft{float:left;margin-left:0;margin-right:10px}.floatright{float:right;margin-left:10px;margin-right:0}footer{padding-top:2px;padding-bottom:2px;padding-left:2%;color:#FFF;clear:both;background-color:#43a6cb;float:none;visibility:visible}h1,h2{color:#9BD57C;font-family:bad-script;font-style:normal;font-weight:400;width:100%;padding-top:100px;marging-right:6px}#two{padding-bottom:auto}#center{margin-left:auto;margin-right:auto;width:100px}@media screen and (max-width:500px){body{font-size:25px}#sidebar{width:100%}#wrapper{width:100%;min-width:470px;max-width:470px;margin-left:auto;margin-right:auto;background-color:#FFF;font-family:bad-script;font-style:normal;font-weight:400}#center{margin-left:auto;margin-right:auto;width:300px}</style>
 
 		<meta name="twitter:cars" content="summary" />
 		<meta name="twitter:title" content="HTML ?" />
