--- a/demo/paper-page/index.html
+++ b/demo/paper-page/index.html
@@ -4,12 +4,9 @@
 		<meta charset="utf-8">
 		<meta name="robots" content="noindex,nofollow">
 		<title>Feuilles</title>
-		<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+		<style>body{color:#444;font:12px/1.5em "Segoe Ui",Arial,Helvetica,sans-serif;background-image:url(background.jpg)}.feuilles{text-align:justify width:75%;padding:15px;margin:5%;height:500px;background-color:#FFF;box-shadow:0 1px 1px rgba(0,0,0,.4),0 10px 0 -5px #F7F7F7,0 11px 1px -5px rgba(0,0,0,.4),0 22px 0 -12px #F7F7F7,0 23px 1px -12px rgba(0,0,0,.4)}p{font-family:bad-script;font-style:normal;font-size:15px}h1,h2{color:#000;font-family:bad-script;font-style:normal;font-weight:400}strong{color:#000}</style>
 		<link href="//cedced19.github.io/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
-		<link rel="stylesheet"  href="s.css" />
 		<script src="http://use.edgefonts.net/bad-script:n4:default.js" type="text/javascript"></script>
-		<!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend
-		that you do not modify it.-->
 		<script>
 		var __adobewebfontsappname__="dreamweaver"
 		</script>
