--- a/demo/countdown-page/index.html
+++ b/demo/countdown-page/index.html
@@ -42,7 +42,7 @@ body {
 <body>
 	   <div style="display:table-cell; vertical-align:middle;">
                   <span id="countdown">
-                       <span id="days"></span>, <span id="hours"></span>, <span id="minutes"></span> et <span id="seconds"></span> avant mon anniversaire !
+                       <span id="days"></span>, <span id="hours"></span>, <span id="minutes"></span> et <span id="seconds"></span><br>avant mon anniversaire !
                   </span>
             </div>
             <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
