--- a/demo/mothers-day/index.html
+++ b/demo/mothers-day/index.html
@@ -16,7 +16,7 @@
 <body class="animated bounceInDown">
     <header class="island">
         <div class="wrap">
-            <h1 class="mega title" >Bone fête <br> Maman !</h1>
+            <h1 class="mega title" >Bonne fête <br> Maman !</h1>
              <canvas id="hearth" width="300px" height="300px">
         </div>
     </header>
