--- a/demo/mothers-day/index.html
+++ b/demo/mothers-day/index.html
@@ -49,12 +49,12 @@ context.strokeStyle = '#FF0000'; // rouge, évidemment
 context.lineWidth = 5;
 
 context.beginPath();
-context.arc(0, 0, 50, 90*(Math.PI/180), 0*(Math.PI/180), false);
+context.arc(0, 0, 50, 90*(Math.PI/180), 0, false);
 context.stroke();
 context.closePath();
 
 context.beginPath();
-context.arc(0, 100, 50, 270*(Math.PI/180), 0*(Math.PI/180), false);
+context.arc(0, 100, 50, 270*(Math.PI/180), 0, false);
 context.stroke();
 context.closePath();
 
