--- a/soft/proto/index.html
+++ b/soft/proto/index.html
@@ -7,19 +7,19 @@
 	<link href="//cedced19.github.io/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
 	<meta name="twitter:cars" content="summary" />
 	<meta name="twitter:title" content="Prototype" />
-	<meta name="twitter:image" content="http://cedced19.github.io/profile.png" />
+	<meta name="twitter:image" content="//cedced19.github.io/profile.png" />
 	<meta name="twitter:site" content="@cedced19" />
 	<meta name="twitter:author" content="@cedced19" />
 	<meta name="twitter:description" content="Un site pour coder en html/css !" />
 
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="Prototype" />
-	<meta property="og:image" content="http://cedced19.github.io/profile.png" />
+	<meta property="og:image" content="//cedced19.github.io/profile.png" />
 	<meta property="og:language" content="fr_FR">
-	<meta property="og:url" content="http://cedced19.github.io/proto/" />
+	<meta property="og:url" content="//cedced19.github.io/proto/" />
 	<meta property="og:description" content="Un site pour coder en html/css !" />
 
-	<link href="https://plus.google.com/104855167193751168501/" rel="publisher" />
+	<link href="//plus.google.com/104855167193751168501/" rel="publisher" />
 	<meta name="description" content="Un site pour coder en html/css !" />
 	<!-- Stylesheets -->
 	<style>blockquote,body,caption,dd,dl,fieldset,figure,form,h1,h2,h3,h4,h5,h6,hr,legend,ol,p,pre,table,td,th,ul{margin:0;padding:0}b,mark,strong{font-weight:700;font-style:inherit}section{display:block}html{background:#f6f6f6;color:#9099A3;font-weight:400;font-size:100%;font-family:proxima-nova,sans-serif;line-height:2em}h1{color:#575d63;font-weight:300;font-family:HelveticaNeue-Light,"Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,sans-serif;font-size:1.5em;line-height:1.5em}h1 strong{font-weight:800}a{color:#ffae00;text-decoration:none}a:hover{text-decoration:underline}.bttnt{display:inline-block;padding:.5em 4em;-webkit-border-radius:3px;-moz-border-radius:3px;-ms-border-radius:3px;-o-border-radius:3px;border-radius:3px;border-radius:3px;background:#268BD2;color:#fff;text-align:center;-webkit-transition:background 300ms ease;-moz-transition:background 300ms ease;-ms-transition:background 300ms ease;-o-transition:background 300ms ease;transition:background 300ms ease}.bttnt:hover{background:#00FDEC;text-decoration:none}.bttnt:active{background:#268BD2}.social{text-align:center}.social .facebook,.social .google,.social .tweet{padding:0;width:204px}.social img{display:block;margin-left:77px}.bttng{display:inline-block;padding:.5em 4em;-webkit-border-radius:3px;-moz-border-radius:3px;-ms-border-radius:3px;-o-border-radius:3px;border-radius:3px;border-radius:3px;background:#C11A01;color:#fff;text-align:center;-webkit-transition:background 300ms ease;-moz-transition:background 300ms ease;-ms-transition:background 300ms ease;-o-transition:background 300ms ease;transition:background 300ms ease}.bttng:hover{background:#FD0000;text-decoration:none}.bttng:active{background:#C11A01}.bttnf{display:inline-block;padding:.5em 4em;-webkit-border-radius:3px;-moz-border-radius:3px;-ms-border-radius:3px;-o-border-radius:3px;border-radius:3px;border-radius:3px;background:#6469EF;color:#fff;text-align:center;-webkit-transition:background 300ms ease;-moz-transition:background 300ms ease;-ms-transition:background 300ms ease;-o-transition:background 300ms ease;transition:background 300ms ease}.bttnf:hover{background:#A1A3F0;text-decoration:none}.bttnf:active{background:#6469EF}[data-tip]{position:relative}[data-tip]:after{position:absolute;top:-35px;left:50%;z-index:9;display:none;margin-left:-102px;padding:.5em 0;width:204px;height:18px;-webkit-border-radius:3px;-moz-border-radius:3px;-ms-border-radius:3px;-o-border-radius:3px;border-radius:3px;background:rgba(0,0,0,.9);color:#fff;content:attr(data-tip);font-size:.75em;line-height:18px}[data-tip]:hover:after{display:block}[data-tip]:active:after{content:"Merci !"}.header{padding:20px 0;text-align:center}.protoDemo{padding:0 10px;background:#f6f6f6;overflow:hidden}iframe{display:block;box-sizing:border-box;min-height:400px;width:100%;outline:0;border:5px solid #eceef1;background:#fff}.protoBuilder{overflow:hidden;padding:0 10px}pre{padding:1em;background-color:#042029;color:#586175;white-space:pre-wrap;font-size:16px;font-family:consolas,monospace;line-height:24px}textarea{display:block;box-sizing:border-box;padding:0 1em 1em;max-width:100%;width:100%;height:200px;outline:0;border:0;background:red;background-color:#042029;color:#81899A;font-size:1em;font-family:consolas,monospace}.protoBuilder .input{float:left;width:50%}.inner.left{padding-right:5px}.inner.right{padding-left:5px}.reference p{margin:10px;padding:10px;background:#eceef1}.disclaimer{padding:10px;max-width:800px;margin:0 auto}.footer{max-width:800px;margin:0 auto;padding:2em;font-size:80%;text-align:center}.footer p{margin:0}@media screen and (max-width:600px){.protoBuilder .input{width:100%;display:block}.input .inner{padding:0 0 10px}}</style>
@@ -61,9 +61,9 @@ Exemple CSS:
 	</section>
 	<br><br>
 	   <div class="island social">
-                <a data-tip="&hearts;" class="bttnt tweet" href="http://twitter.com/share?url=http://cedced19.github.io/proto/&text=Prototype by @cedced19 :"><img src="birdy.png" width="50" height="50" /></a>
-                <a data-tip="&hearts;" class="bttng google" href="https://plus.google.com/share?url=http%3A%2F%2Fcedced19.github.io%2Fproto%2F&hl=fr"><img src="google.png" width="50" height="50" /></a>
-                <a data-tip="&hearts;" class="bttnf facebook" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fcedced19.github.io%2Fproto%2F"><img src="facebook.png" width="50" height="50" /></a>
+                <a data-tip="&hearts;" class="bttnt tweet" href="//twitter.com/share?url=http://cedced19.github.io/soft/proto/&text=Prototype by @cedced19 :"><img src="birdy.png" width="50" height="50" /></a>
+                <a data-tip="&hearts;" class="bttng google" href="//plus.google.com/share?url=http%3A%2F%2Fcedced19.github.io%2Fsoft%2Fproto%2F&hl=fr"><img src="google.png" width="50" height="50" /></a>
+                <a data-tip="&hearts;" class="bttnf facebook" href="//www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fcedced19.github.io%2Fsoft%2Fproto%2F"><img src="facebook.png" width="50" height="50" /></a>
                </div>
 	<div class="island footer">
 		<p>Créer par <a href="https://cedced19.github.io">Cedced19</a>.</p>
