Add Grunt to download-page
Yeah

--- a/demo/download-page/index.html
+++ b/demo/download-page/index.html
@@ -13,30 +13,26 @@
 		<meta name="twitter:site" content="@cedced19" />
 		<meta name="twitter:author" content="@cedced19" />
 		<meta name="twitter:description" content="Un site pour télécharger un fichier" />
-		
+
 		<meta property="og:type" content="website" />
 		<meta property="og:title" content="Download Page" />
 		<meta property="og:image" content="http://cedced19.github.io/profile.png" />
 		<meta property="og:language" content="fr_FR">
 		<meta property="og:url" content="http://cedced19.github.io/demo/download-page/" />
 		<meta property="og:description" content="Un site pour télécharger un fichier" />
-		        
+
 		<link href="https://plus.google.com/104855167193751168501/" rel="publisher" />
 		<meta name="description" content="Un site pour télécharger un fichier" />
 
 		<title>Cedced19 | Download Page</title>
 
 		<!-- CSS & Fonts -->
-		<link href="css/bootstrap.css" rel="stylesheet">
-		<link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
-		<link href='http://fonts.googleapis.com/css?family=Raleway:300' rel='stylesheet' type='text/css'>
-		<link href="css/style.css" rel="stylesheet">
+		<link href="min/app.css" rel="stylesheet">
 		<link href="//cedced19.github.io/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
-		
+
 		<!-- Javascripts -->
-		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
-		
+		<script type="text/javascript" src="min/app.js"></script>
+
     </head>
     <body data-offset="70">
 		<div class="section welcome">
@@ -51,7 +47,7 @@
 				</div>
 			</div>
 		</div>
-	
+
 		<!-- Modals -->
 		<div class="modal fade" id="learn" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 			<div class="modal-dialog">
