--- a/presentation/why-bespoke/index.html
+++ b/presentation/why-bespoke/index.html
@@ -3,34 +3,49 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Hello World</title>
+    <title>Why use Bespokejs ?</title>
     <link rel="stylesheet" href="styles/styles.css"/>
+    <link href="http://markdalgleish.com/images/profile.jpg" rel="shortcut icon" type="image/x-icon">
   </head>
   <body>
     <article>
       <section data-bespoke-state="emphatic">
-        <h1>Hello World !</h1>
+        <h1>Why use <a href="http://markdalgleish.com/projects/bespoke.js/">Bespoke.js</a> ?</h1>
+        <h3>Use arrow-keys to navigate</h3>
+        <h3>Edit by <a href="href='http://cedced19.github.io">cedced19</a></h3>
       </section>
       <section data-bespoke-state="emphatic">
-        <h2>Keyboard Interaction</h2>
-        <h3>Powered by <a href="https://github.com/markdalgleish/bespoke-keys">bespoke-keys</a></h3>
+        <h2>Powerpoint is dead !</h2>
+        <h3>You don't have to download a file !</h3>
       </section>
       <section data-bespoke-state="emphatic">
-        <h2>Touch Interaction !</h2>
-        <h3>Powered by <a href="https://github.com/markdalgleish/bespoke-touch">bespoke-touch</a></h3>
+        <ul>
+          <li>
+            <h3>It's on...</h3>
+          </li>
+          <li><a href="https://github.com/markdalgleish/bespoke.js"><img src="http://upload.wikimedia.org/wikipedia/commons/thumb/2/29/GitHub_logo_2013.svg/600px-GitHub_logo_2013.svg.png" width="325px" height="100px"></a></li>
+        </ul>
+      </section>
+      <section data-bespoke-state="emphatic">
+        <h2 class="bullet">A genius creator :</h2>
+        <h3>
+          <ul>
+            <li><a href="http://twitter/markdalgleish"><img src="http://markdalgleish.com/images/profile.jpg" width="300px" height="300px" class="profile"></a></li>
+            <li><a href="http://twitter/markdalgleish">@markdalgleish</a></li>
+          </ul>
+        </h3>
+      </section>
+      <section data-bespoke-state="emphatic"><img src="http://yeoman.io/assets/img/yeoman-logo.a053.png" width="328px" height="292px">
+        <hr>
+        <h3>You can generate a presentation in two seconds !</h3>
+        <hr>
+        <pre><code class="language-markup">$ npm install -g generator-bespoke
+$ yo bespoke
+</code></pre>
       </section>
       <section data-bespoke-state="emphatic">
         <h2>Responsive Slides</h2>
         <h3>Powered by <a href="https://github.com/markdalgleish/bespoke-scale">bespoke-scale</a></h3>
-      </section>
-      <section data-bespoke-state="emphatic">
-        <h2>Bullet List</h2>
-        <h3 class="bullet">Powered by <a href="https://github.com/markdalgleish/bespoke-bullets">bespoke-bullets</a></h3>
-        <ul>
-          <li>Bullet 1</li>
-          <li>Bullet 2</li>
-          <li>Bullet 3</li>
-        </ul>
       </section>
       <section data-bespoke-state="emphatic">
         <h2>Syntax Highlighting</h2>
@@ -46,26 +61,35 @@
 </code></pre>
       </section>
       <section data-bespoke-state="emphatic">
-        <h2>Named Route</h2>
-        <h3>Powered by <a href="https://github.com/markdalgleish/bespoke-hash">bespoke-hash</a></h3>
-        <p>Look up! This route has been named with a <em>'data-bespoke-hash'</em> attribute.</p>
+        <h2 class="bullet">Compatibilty :</h2>
+        <h3>
+          <ul>
+            <li>Touch</li>
+            <li>Keyboard</li>
+          </ul>
+        </h3>
       </section>
       <section data-bespoke-state="emphatic">
-        <h2>Emphatic Slide!</h2>
-        <h3>Powered by <a href="https://github.com/markdalgleish/bespoke-state">bespoke-state</a></h3>
+        <h2>Syntax <a href="http://jade-lang.com/">Jade</a></h2>
+        <h3>Writing more fast HTML !</h3>
+        <hr>
+        <pre><code class="language-markup">h1 Why use Bespokejs ?
+h3 Use arrow-keys to navigate
+</code></pre>
       </section>
       <section data-bespoke-state="emphatic">
-        <h2 class="bullet">Just the beginning...</h2>
+        <h2>Syntax <a href="http://learnboost.github.io/stylus/">Stylus</a></h2>
+        <h3>Writing more fast CSS !</h3>
         <hr>
-        <ul>
-          <li>Edit <a href="http://jade-lang.com/">Jade</a> markup in <em>'src/index.jade'</em></li>
-          <li>Edit <a href="http://learnboost.github.io/stylus/">Stylus</a> styles in <em>'src/styles/main.styl'</em></li>
-          <li>Edit JavaScript in <em>'src/scripts/main.js'</em></li>
-        </ul>
-        <hr>
-        <ul>
-          <li><strong>Enjoy! :)</strong><a href="http://cedced19.github.io"> -@cedced19</a></li>
-        </ul>
+        <pre><code class="language-markup">article
+  transition: background slide_transition_length slide_transition_easing
+  display: none
+  &.bespoke-parent
+    display: block
+    </code></pre>
+      </section>
+      <section data-bespoke-state="emphatic">
+        <h2>Just the beginning...</h2>
       </section>
     </article>
     <script src="scripts/scripts.js"></script>
