--- a/soft/home/index.html
+++ b/soft/home/index.html
@@ -140,7 +140,7 @@
 			</footer>
 		</section>
 		<footer id="info">
-				Cedced19 - License <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA</a>
+				Cedced19 - License <a href="http://cedced19.github.io/license/">MIT</a>
 		</footer>
                 <script type="text/javascript" src="js/helpers.js"></script>
                 <script type="text/javascript" src="js/store.js"></script>
@@ -149,15 +149,5 @@
                 <script type="text/javascript" src="js/view.js"></script>
                 <script type="text/javascript" src="js/controller.js"></script>
                 <script type="text/javascript" src="js/app.js"></script>
-		<script type="text/javascript">
-		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-		  ga('create', 'UA-49736522-1', 'cedced19.github.io');
-		  ga('send', 'pageview');
-
-		</script>
 	</body>
 </html>
