--- a/dev/index.html
+++ b/dev/index.html
@@ -21,7 +21,7 @@
         <meta name="msvalidate.01" content="7AA9997055DFFA5FA75B150DB285F647">
         <meta name="google-site-verification" content="daG8-WfmzTnxEOZ0gvyKhFVPyqGcp_MuANWkyM8THK8">
 
-        <!-- build:css styles/styles.css -->
+        <!-- build:css /styles/styles.css -->
         <link rel="stylesheet" type="text/css" href="styles/main.css">
         <!-- endbuild -->
 
