Fix path bug 2.

--- a/dev/404.html
+++ b/dev/404.html
@@ -21,9 +21,7 @@
         <meta name="msvalidate.01" content="7AA9997055DFFA5FA75B150DB285F647">
         <meta name="google-site-verification" content="daG8-WfmzTnxEOZ0gvyKhFVPyqGcp_MuANWkyM8THK8">
 
-        <!-- build:css /styles/styles.css -->
-        <link rel="stylesheet" type="text/css" href="styles/main.css">
-        <!-- endbuild -->
+        <link rel="stylesheet" href="/styles/styles.css">
 
     </head>
     <body class="fourOhfour">
@@ -37,10 +35,7 @@
                     <span class="scroll-notice"></span>
         </header>
 
-        <!-- build:js scripts/scripts.js -->
-        <script type="text/javascript" src="scripts/jquery.min.js"></script>
-        <script type="text/javascript" src="scripts/header.js"></script>
-        <!-- endbuild -->
+        <script src="/scripts/scripts.js"></script>
 
     </body>
 </html>
