--- a/dev/index.html
+++ b/dev/index.html
@@ -21,9 +21,7 @@
         <meta name="msvalidate.01" content="7AA9997055DFFA5FA75B150DB285F647">
         <meta name="google-site-verification" content="daG8-WfmzTnxEOZ0gvyKhFVPyqGcp_MuANWkyM8THK8">
 
-        <!-- build:css /styles/styles.css -->
-        <link rel="stylesheet" type="text/css" href="styles/main.css">
-        <!-- endbuild -->
+        <link rel="stylesheet" href="/styles/styles.css">
 
     </head>
     <body class="home">
@@ -71,13 +69,8 @@
     </footer>
 
 
-<!-- build:js scripts/scripts.js -->
-<script type="text/javascript" src="scripts/jquery.min.js"></script>
-<script type="text/javascript" src="scripts/header.js"></script>
-<!-- endbuild -->
-<!-- build:js scripts/github.min.js -->
-<script type="text/javascript" src="scripts/github.js"></script>
-<!-- endbuild -->
+<script src="/scripts/scripts.js"></script>
+<script src="/scripts/github.min.js"></script>
 
 
 
