--- a/dev/404.html
+++ b/dev/404.html
@@ -21,7 +21,9 @@
         <meta name="msvalidate.01" content="7AA9997055DFFA5FA75B150DB285F647">
         <meta name="google-site-verification" content="daG8-WfmzTnxEOZ0gvyKhFVPyqGcp_MuANWkyM8THK8">
 
-        <link rel="stylesheet" href="/styles/styles.css">
+        <!-- build:css /styles/styles.css -->
+        <link rel="stylesheet" type="text/css" href="styles/main.css">
+        <!-- endbuild -->
 
     </head>
     <body class="fourOhfour">
@@ -32,10 +34,11 @@
                         <br>
                         <h2>Oups. <a href="/" rel="home">Home ?</a></h2>
                     </div>
-                    <span class="scroll-notice"></span>
         </header>
 
-        <script src="/scripts/scripts.js"></script>
-
+        <!-- build:js scripts/scripts.js -->
+        <script type="text/javascript" src="scripts/jquery.min.js"></script>
+        <script type="text/javascript" src="scripts/header.js"></script>
+        <!-- endbuild -->
     </body>
 </html>
