--- a/dev/license/index.html
+++ b/dev/license/index.html
@@ -22,7 +22,9 @@
         <meta name="msvalidate.01" content="7AA9997055DFFA5FA75B150DB285F647">
         <meta name="google-site-verification" content="daG8-WfmzTnxEOZ0gvyKhFVPyqGcp_MuANWkyM8THK8">
 
-        <link rel="stylesheet" href="/styles/styles.css">
+        <!-- build:css /styles/styles.css -->
+        <link rel="stylesheet" type="text/css" href="styles/main.css">
+        <!-- endbuild -->
 
     </head>
     <body class="home">
@@ -73,7 +75,10 @@
     </footer>
 
 
-        <script src="/scripts/scripts.js"></script>
+        <!-- build:js scripts/scripts.js -->
+        <script type="text/javascript" src="scripts/jquery.min.js"></script>
+        <script type="text/javascript" src="scripts/header.js"></script>
+        <!-- endbuild -->
 
     </body>
 </html>
