--- a/dev/404.html
+++ b/dev/404.html
@@ -36,9 +36,9 @@
                     </div>
         </header>
 
-        <!-- build:js scripts/scripts.js -->
-        <script type="text/javascript" src="scripts/jquery.min.js"></script>
-        <script type="text/javascript" src="scripts/header.js"></script>
+        <!-- build:js /scripts/scripts.js -->
+        <script type="text/javascript" src="/scripts/jquery.min.js"></script>
+        <script type="text/javascript" src="/scripts/header.js"></script>
         <!-- endbuild -->
     </body>
 </html>
