--- a/dev/index.html
+++ b/dev/index.html
@@ -72,11 +72,11 @@
 
 
     <!-- build:js scripts/scripts.js -->
-    <script type="text/javascript" src="scripts/jquery.min.js"></script>
-    <script type="text/javascript" src="scripts/header.js"></script>
+    <script type="text/javascript" src="/scripts/jquery.min.js"></script>
+    <script type="text/javascript" src="/scripts/header.js"></script>
     <!-- endbuild -->
     <!-- build:js scripts/github.min.js -->
-    <script type="text/javascript" src="scripts/github.js"></script>
+    <script type="text/javascript" src="/scripts/github.js"></script>
     <!-- endbuild -->
 
 
