--- a/dev/license/index.html
+++ b/dev/license/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
     <head>
@@ -75,9 +74,9 @@
     </footer>
 
 
-        <!-- build:js scripts/scripts.js -->
-        <script type="text/javascript" src="scripts/jquery.min.js"></script>
-        <script type="text/javascript" src="scripts/header.js"></script>
+        <!-- build:js /scripts/scripts.js -->
+        <script type="text/javascript" src="/scripts/jquery.min.js"></script>
+        <script type="text/javascript" src="/scripts/header.js"></script>
         <!-- endbuild -->
 
     </body>
