--- a/dev/index.html
+++ b/dev/index.html
@@ -37,11 +37,14 @@
       </header>
 
     <main class="content-wrap animate" role="main">
-        <h3 id="contact">Contact</h3>
+        <h3>Contact</h3>
         <p>You can follow me on <a href="//twitter.com/cedced19">Twitter</a> or <a href="//plus.google.com/u/0/b/104855167193751168501/104855167193751168501/posts">Google+</a>, <a href="mailto:cedced19@gmail.com?subject=Hello.net&body=Hello">send me an email</a>.</p>
 
-        <h3 id="depots">Repositories</h3>
+        <h3>Repositories</h3>
         <ol id="repos">
+         </ol>
+         <h3>Other</h3>
+         <ol id="other">
          <li class="repo">
            <a href="http://cedced19.github.io/soft/home/" class="name-repo">Home</a>
            <p class="desc-repo">A homepage without pub</p>
