Fix robots.txt and other.

--- a/dev/404.html
+++ b/dev/404.html
@@ -37,8 +37,8 @@
         </header>
 
         <!-- build:js /scripts/scripts.js -->
-        <script type="text/javascript" src="/scripts/jquery.min.js"></script>
-        <script type="text/javascript" src="/scripts/header.js"></script>
+        <script type="text/javascript" src="scripts/jquery.min.js"></script>
+        <script type="text/javascript" src="scripts/header.js"></script>
         <!-- endbuild -->
     </body>
 </html>
