--- a/dev/license/index.html
+++ b/dev/license/index.html
@@ -22,7 +22,7 @@
         <meta name="google-site-verification" content="daG8-WfmzTnxEOZ0gvyKhFVPyqGcp_MuANWkyM8THK8">
 
         <!-- build:css /styles/styles.css -->
-        <link rel="stylesheet" type="text/css" href="styles/main.css">
+        <link rel="stylesheet" type="text/css" href="../styles/main.css">
         <!-- endbuild -->
 
     </head>
@@ -75,8 +75,8 @@
 
 
         <!-- build:js /scripts/scripts.js -->
-        <script type="text/javascript" src="/scripts/jquery.min.js"></script>
-        <script type="text/javascript" src="/scripts/header.js"></script>
+        <script type="text/javascript" src="scripts/jquery.min.js"></script>
+        <script type="text/javascript" src="scripts/header.js"></script>
         <!-- endbuild -->
 
     </body>
