--- a/dev/index.html
+++ b/dev/index.html
@@ -31,7 +31,7 @@
             <div class="masthead animate">
               <h1>Cedced19</h1>
               <br>
-              <h2>Developper.</h2>
+              <h2>Developer.</h2>
             </div>
             <span class="scroll-notice"></span>
       </header>
