Delete useless page and add noscript balise

--- a/dev/index.html
+++ b/dev/index.html
@@ -42,9 +42,11 @@
 
         <h3>Repositories</h3>
         <ol id="repos">
-         </ol>
-         <h3>Other</h3>
-         <ol id="other">
+        </ol>
+        <noscript><p>You had to enable Javascript to see this paragraph.</p></noscript>
+
+        <h3>Other</h3>
+        <ol id="other">
          <li class="repo">
            <a href="http://cedced19.github.io/soft/home/" class="name-repo">Home</a>
            <p class="desc-repo">A homepage without pub</p>
