Revert "Change favicon location"
This reverts commit 7a3f7bc7ac81afd0f11a984cec49dd66892a81da.

--- a/demo/countdown-page/index.html
+++ b/demo/countdown-page/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Countdown</title>
-<link href="//cedced19.github.io/favicon.ico" rel="shortcut icon" type="image/x-icon">
+<link href="//cedced19.github.io/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 <meta name="twitter:cars" content="summary" />
