--- a/dev/index.html
+++ b/dev/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Cedced19</title>
         <meta name="viewport" content="width=device-width">
-        <link href="//cedced19.github.io/favicon.ico" rel="shortcut icon" type="image/x-icon">
+        <link href="//cedced19.github.io/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
         <meta name="author" content="Cedced19">
         <meta name="twitter:cars" content="summary">
         <meta name="twitter:title" content="Cedced19">
