--- a/demo/mothers-day/index.html
+++ b/demo/mothers-day/index.html
@@ -4,22 +4,25 @@
   <title>Bonne fête Maman !</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="initial-scale=1, minimal-ui" />
+  <!--[if lt IE 9]>
+            <script type="text/javascript" src="/scripts/ie.js"></script>
+  <![endif]-->
   <meta name="twitter:cars" content="summary" />
-  <meta name="twitter:title" content="Bonne fête Maman !" />
-  <meta name="twitter:image" content="http://cedced19.github.io/profile.png" />
-  <meta name="twitter:site" content="@cedced19" />
-  <meta name="twitter:author" content="@cedced19" />
-  <meta name="twitter:description" content="Un site avec un beau css pour toutes les mamans du monde !" />
+	<meta name="twitter:title" content="Bonne fête Maman !" />
+	<meta name="twitter:image" content="http://cedced19.github.io/profile.png" />
+	<meta name="twitter:site" content="@cedced19" />
+	<meta name="twitter:author" content="@cedced19" />
+	<meta name="twitter:description" content="Un site avec un beau css pour toutes les mamans du monde !" />
 
-  <meta property="og:type" content="website" />
-  <meta property="og:title" content="Bonne fête Maman !" />
-  <meta property="og:image" content="http://cedced19.github.io/profile.png" />
-  <meta property="og:language" content="fr_FR">
-  <meta property="og:url" content="http://cedced19.github.io/demo/mothers-day/" />
-  <meta property="og:description" content="Un site avec un beau css pour toutes les mamans du monde !" />
+	<meta property="og:type" content="website" />
+	<meta property="og:title" content="Bonne fête Maman !" />
+	<meta property="og:image" content="http://cedced19.github.io/profile.png" />
+	<meta property="og:language" content="fr_FR">
+	<meta property="og:url" content="http://cedced19.github.io/demo/mothers-day/" />
+	<meta property="og:description" content="Un site avec un beau css pour toutes les mamans du monde !" />
 
-   <link href="//plus.google.com/104855167193751168501/" rel="publisher" />
-   <meta name="description" content="Un site avec un beau css pour toutes les mamans du monde !" />
+	<link href="//plus.google.com/104855167193751168501/" rel="publisher" />
+	<meta name="description" content="Un site avec un beau css pour toutes les mamans du monde !" />
 
   <style>
   *,:after,:before{margin:0;padding:0;position:relative;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}button,input,select,textarea{-webkit-appearance:none;-moz-appearance:none;appearance:none}.alpha,h1{margin-bottom:1.5rem;font-size:3rem;font-weight:100;line-height:1;letter-spacing:-.05em}.beta,h2{margin-bottom:.75rem;font-weight:400;font-size:1.5rem;line-height:1}@media (min-width:650px){.mega{font-size:6rem;line-height:1}}.meta,.subhead{color:#7b8993}.promo{text-align:center}.wrap{max-width:38rem;margin:0 auto}.island{padding:1.5rem}.isle{padding:.75rem}.spit{padding:.375rem}html{font:100%/1.5 Roboto,Verdana,sans-serif;color:red;background-color:#fff;-webkit-font-smoothing:antialiased;width:100%;overflow:hidden-x;text-align:center}@media (min-width:650px){html{height:100%}html:before{content:'';display:inline-block;height:100%;vertical-align:middle;margin-right:-.25em}body{display:inline-block;vertical-align:middle;max-width:38rem}}::selection{color:#FFF;background:#FF0000;}
