--- a/dev/index.html
+++ b/dev/index.html
@@ -50,22 +50,22 @@
          <li class="repo">
            <a href="http://cedced19.github.io/soft/home/" class="name-repo">Home</a>
            <p class="desc-repo">A homepage without pub</p>
-           <span class="language">CSS</span>
+           <span class="gray">CSS</span>
          </li>
          <li class="repo">
            <a href="http://cedced19.github.io/demo/countdown-page/" class="name-repo">Countdown</a>
            <p class="desc-repo">A countdown</p>
-           <span class="language">JavaScript</span>
+           <span class="gray">JavaScript</span>
           </li>
           <li class="repo">
            <a href="http://cedced19.github.io/demo/greeting-birth/" class="name-repo">Greeting birth</a>
            <p class="desc-repo">A page for birth</p>
-           <span class="language">JavaScript</span>
+           <span class="gray">JavaScript</span>
           </li>
           <li class="repo">
            <a href="http://cedced19.github.io/demo/mothers-day/" class="name-repo">Mother's day</a>
            <p class="desc-repo">A page for Mother's Day</p>
-           <span class="language">JavaScript</span>
+           <span class="gray">JavaScript</span>
           </li>
          </ol>
     </main>
