--- a/dev/index.html
+++ b/dev/index.html
@@ -48,27 +48,27 @@
         <h3>Other</h3>
         <ol id="other">
          <li class="repo">
-           <a href="/soft/home/" class="name-repo">Home</a>
+           <a href="soft/home/" class="name-repo">Home</a>
            <p class="desc-repo">A homepage without pub</p>
            <span class="gray">CSS</span>
          </li>
          <li class="repo">
-           <a href="/soft/calculs/" class="name-repo">Calculs</a>
+           <a href="soft/calculs/" class="name-repo">Calculs</a>
            <p class="desc-repo">A page for a school project</p>
            <span class="gray">JavaScript</span>
           </li>
          <li class="repo">
-           <a href="/demo/countdown-page/" class="name-repo">Countdown</a>
+           <a href="demo/countdown-page/" class="name-repo">Countdown</a>
            <p class="desc-repo">A countdown</p>
            <span class="gray">JavaScript</span>
           </li>
           <li class="repo">
-           <a href="/demo/greeting-birth/" class="name-repo">Greeting birth</a>
+           <a href="demo/greeting-birth/" class="name-repo">Greeting birth</a>
            <p class="desc-repo">A page for birth</p>
            <span class="gray">JavaScript</span>
           </li>
           <li class="repo">
-           <a href="/demo/mothers-day/" class="name-repo">Mother's day</a>
+           <a href="demo/mothers-day/" class="name-repo">Mother's day</a>
            <p class="desc-repo">A page for Mother's Day</p>
            <span class="gray">JavaScript</span>
           </li>
