--- a/dev/soft/calculs/index.html
+++ b/dev/soft/calculs/index.html
@@ -14,38 +14,36 @@
         <main class="content-warp">
 
             <h1>Calculs</h1>
-            <section>
-                <h2>Data:</h2>
-                <p>Number of hours (in H)</p>
-                <input type="text" ng-model="hours">
-                <p>Number of watt-hour (in Wh)</p>
-                <input type="text" ng-model="watt">
-                <p>Cost of the light bulb (in €)</p>
-                <input type="text" ng-model="costBulb">
-                <p>Lifetime (in thousand years)</p>
-                <input type="text" ng-model="lifetime">
-                <p>Cost of the kWh (in €)</p>
-                <input type="text" ng-model="costKwh">
-            </section>
 
+            <br>
+            <h2>Data:</h2>
+            <p>Number of hours (in H)</p>
+            <input type="text" ng-model="hours">
+            <p>Number of watt-hour (in Wh)</p>
+            <input type="text" ng-model="watt">
+            <p>Cost of the light bulb (in €)</p>
+            <input type="text" ng-model="costBulb">
+            <p>Lifetime (in thousand years)</p>
+            <input type="text" ng-model="lifetime">
+            <p>Cost of the kWh (in €)</p>
+            <input type="text" ng-model="costKwh">
+
+            <br>
             <h2>Cost of consumption:</h2>
             <p>{{ ((( watt * hours) / 1000) * costKwh ) }}</p>
 
+            <br>
             <h2>Cost of running:</h2>
             <p>{{ ((( watt * hours) / 1000) * costKwh ) + ((hours / lifetime) * costBulb) }}</p>
 
-            <section>
-                <h2>How this work ?</h2>
-                <h3>Cost of consumption:</h3>
-                <pre>
-                        ( {{watt}} * {{hours}}) / 1000) * {{costKwh}}
-                </pre>
-                <h3>Cost of running:</h3>
-                <pre>
-                        ((( {{watt}} * {{hours}}) / 1000) * {{costKwh}} ) + (({{hours}} / {{lifetime}}) * {{costBulb}})
-                </pre>
-                <p class="warning">I had to do a calculs for a excel grid.</p>
-            </section>
+            <br>
+            <h2>How this work ?</h2>
+            <h3>Cost of consumption:</h3>
+            <p>( {{watt}} * {{hours}}) / 1000) * {{costKwh}}</p>
+            <h3>Cost of running:</h3>
+            <p>((( {{watt}} * {{hours}}) / 1000) * {{costKwh}} ) + (({{hours}} / {{lifetime}}) * {{costBulb}})</p>
+            <p class="warning">I had to do a calculs for a excel grid.</p>
+
         </main>
 
             <!-- build:js /scripts/calculs.min.js -->
