--- a/dev/soft/calculs/index.html
+++ b/dev/soft/calculs/index.html
@@ -23,7 +23,7 @@
             <input type="text" ng-model="watt">
             <p>Cost of the light bulb (in €)</p>
             <input type="text" ng-model="costBulb">
-            <p>Lifetime (in thousand years)</p>
+            <p>Lifetime (in thousand hours)</p>
             <input type="text" ng-model="lifetime">
             <p>Cost of the kWh (in €)</p>
             <input type="text" ng-model="costKwh">
