Adding meta tags

--- a/demo/greeting-birth/index.html
+++ b/demo/greeting-birth/index.html
@@ -11,6 +11,9 @@
   <meta name="twitter:author" content="@cedced19" />
   <meta name="twitter:description" content="Un site pour ma petite qui vient de naitre !" />
 
+  <meta name="author" content="Cedced19">
+  <meta name="description" content="A page for my cousine.">
+
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Hello Anaé !" />
   <meta property="og:image" content="http://cedced19.github.io/profile.png" />
