--- a/demo/mothers-day/index.html
+++ b/demo/mothers-day/index.html
@@ -11,6 +11,9 @@
   <meta name="twitter:author" content="@cedced19" />
   <meta name="twitter:description" content="Un site avec un beau css pour toutes les mamans du monde !" />
 
+  <meta name="author" content="Cedced19">
+  <meta name="description" content="A page for my mother.">
+
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Bonne fête Maman !" />
   <meta property="og:image" content="http://cedced19.github.io/profile.png" />
