--- a/dev/index.html
+++ b/dev/index.html
@@ -12,8 +12,9 @@
         <meta name="twitter:image" content="http://cedced19.github.io/profile.png">
         <meta name="twitter:site" content="@cedced19">
         <meta name="twitter:author" content="@cedced19">
+        <meta name="author" content="Cedced19">
+        <meta name="description" content="Cedced19's developer website. Node.js fan.">
         <meta property="og:type" content="website">
-        <meta property="og:title" content="Cedced19">
         <meta property="og:image" content="http://cedced19.github.io/profile.png">
         <meta property="og:language" content="fr_FR">
         <meta property="og:url" content="cedced19.github.io">
