--- a/dev/license/index.html
+++ b/dev/license/index.html
@@ -12,6 +12,8 @@
         <meta name="twitter:image" content="http://cedced19.github.io/profile.png">
         <meta name="twitter:site" content="@cedced19">
         <meta name="twitter:author" content="@cedced19">
+        <meta name="author" content="Cedced19">
+        <meta name="description" content="Cedced19's license. Node.js fan.">
         <meta property="og:type" content="website">
         <meta property="og:title" content="License">
         <meta property="og:image" content="http://cedced19.github.io/profile.png">
