--- a/dev/soft/home/index.html
+++ b/dev/soft/home/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Home</title>
     <link href="//cedced19.github.io/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
+    <meta name="author" content="Cedced19">
+    <meta name="description" content="A home page.">
     <!-- build:css /styles/home.min.css-->
     <link rel="stylesheet" type="text/css" href="../../styles/home.css">
     <!-- endbuild-->
