--- a/dev/soft/calculs/index.html
+++ b/dev/soft/calculs/index.html
@@ -5,6 +5,8 @@
         <title>Calculs</title>
         <meta name="viewport" content="width=device-width">
         <link href="//cedced19.github.io/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
+        <meta name="author" content="Cedced19">
+        <meta name="description" content="A page to calcul LED cost.">
         <!-- build:css /styles/styles.css -->
         <link rel="stylesheet" href="../../styles/main.css">
         <!-- endbuild -->
