--- a/demo/countdown-page/index.html
+++ b/demo/countdown-page/index.html
@@ -38,19 +38,20 @@ body {
 	font-size:65px;
 	padding:15px;
 	text-align:center;
+      overflow:hidden;
 }
 </style>
 </head>
 <body>
 	   <div style="display:table-cell; vertical-align:middle;">
                   <span id="countdown">
-                       <span id="days"></span>, <span id="hours"></span>, <span id="minutes"></span> et <span id="seconds"></span><br>avant mon anniversaire !
+                       <span id="days"></span>, <span id="hours"></span>, <span id="minutes"></span> and <span id="seconds"></span><br>before my birthday!
                   </span>
             </div>
             <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
             <script type="text/javascript">
                 (function($){
-                    var launch = new Date(2014,9,19), // en UTC
+                    var launch = new Date(2014,9,19,3), // en UTC
                      days = $('#days'),
                      hours = $('#hours'),
                      minutes = $('#minutes'),
@@ -61,19 +62,19 @@ body {
                         var s = (launch - now)/1000 + now.getTimezoneOffset()*60;
 
                         var d = Math.floor(s/86400);
-                        days.html(d+' jour'+(d>1?'s' : ''));
+                        days.html(d+' day'+(d>1?'s' : ''));
                         s-= d*86400;
 
                         var h = Math.floor(s/3600);
-                        hours.html(h+' heure'+(d>1?'s' : ''));
+                        hours.html(h+' hour'+(h>1?'s' : ''));
                         s -= h*3600;
 
                         var m = Math.floor(s/60);
-                        minutes.html(m+' minute'+(d>1?'s' : ''));
+                        minutes.html(m+' minute'+(m>1?'s' : ''));
                         s -= m*60;
 
                         s = Math.floor(s);
-                        seconds.html(s+' seconde'+(d>1?'s' : ''));
+                        seconds.html(s+' second'+(s>1?'s' : ''));
 
                         setTimeout(setDate, 1000);
                     }
