Update favicon.ico location in htmls files

--- a/dev/soft/calculs/index.html
+++ b/dev/soft/calculs/index.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
         <title>Calculs</title>
         <meta name="viewport" content="width=device-width">
-        <link href="//cedced19.github.io/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
+        <link href="//cedced19.github.io/favicon.ico" rel="shortcut icon" type="image/x-icon">
         <meta name="author" content="Cedced19">
         <meta name="description" content="A page to calcul LED cost.">
         <!-- build:css /styles/styles.css -->
