--- a/dev/soft/home/index.html
+++ b/dev/soft/home/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Home</title>
-    <link href="//cedced19.github.io/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
+    <link href="//cedced19.github.io/favicon.ico" rel="shortcut icon" type="image/x-icon">
     <meta name="author" content="Cedced19">
     <meta name="description" content="A home page.">
     <!-- build:css /styles/home.min.css-->
@@ -19,7 +19,7 @@
         <input name="q" id="search" placeholder="Google" autofocus>
       </form>
       <h3>Links</h3>
-      <div class="social"><a href="//facebook.com" class="icon-facebook"></a><a href="//youtube.com" class="icon-youtube"></a><a href="//mail.google.com" class="icon-gmail"></a><a href="//twitter.com" class="icon-twitter"></a><a href="//github.com" class="icon-github"></a></div>
+      <div class="social"><a href="//facebook.com" class="icon-facebook"></a><a href="//youtube.com" class="icon-youtube"></a><a href="//inbox.google.com" class="icon-gmail"></a><a href="//twitter.com" class="icon-twitter"></a><a href="//github.com" class="icon-github"></a></div>
     </main>
     <footer class="author">Created by <a href="//cedced19.github.io">Cedced19</a></footer>
   </body>
