Delete Google+ Link

--- a/dev/index.html
+++ b/dev/index.html
@@ -39,7 +39,7 @@
 
     <main class="content-wrap animate" role="main">
         <h3>Contact</h3>
-        <p>You can follow me on <a href="//twitter.com/cedced19">Twitter</a> or <a href="//plus.google.com/u/0/b/104855167193751168501/104855167193751168501/posts">Google+</a>, <a href="mailto:cedced19@gmail.com?subject=Hello.net&body=Hello">send me an email</a>.</p>
+        <p>You can follow me on <a href="//twitter.com/cedced19">Twitter</a> or <a href="mailto:cedced19@gmail.com?subject=Hello.net&body=Hello">send me an email</a>.</p>
 
         <h3>Repositories</h3>
         <ol id="repos">
