--- a/dev/index.html
+++ b/dev/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Cedced19</title>
         <meta name="viewport" content="width=device-width">
-        <link href="//cedced19.github.io/favicon.ico" rel="shortcut icon" type="image/x-icon">
+        <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
         <meta name="author" content="Cedced19">
         <meta name="twitter:cars" content="summary">
         <meta name="twitter:title" content="Cedced19">
@@ -14,6 +14,7 @@
         <meta name="twitter:author" content="@cedced19">
         <meta name="author" content="Cedced19">
         <meta name="description" content="Cedced19's developer website. Node.js fan.">
+        <meta name="keywords" content="Cedced19, Developer, Node, JS, HTML, CSS, JavaScript">
         <meta property="og:type" content="website">
         <meta property="og:image" content="http://cedced19.github.io/profile.png">
         <meta property="og:language" content="fr_FR">
@@ -38,8 +39,15 @@
       </header>
 
     <main class="content-wrap animate" role="main">
-        <h3>Contact</h3>
-        <p>You can follow me on <a href="//twitter.com/cedced19">Twitter</a> or <a href="mailto:cedced19@gmail.com?subject=Hello.net&body=Hello">send me an email</a>.</p>
+        <p>
+            Hi! 
+            You're on Cedced19's site, here there are a lot of useless software!
+            Few of them can be usefull...
+        </p>
+        <p>
+            He is a <a href="http://nodejs.org/">Node.js</a> fan
+        </p>
+        <p>You can follow Cedced19 on <a href="//twitter.com/cedced19">Twitter</a> or <a href="mailto:cedced19@gmail.com?subject=Hello.net&body=Hello">send me an email</a>.</p>
 
         <h3>Repositories</h3>
         <ol id="repos">
@@ -50,22 +58,22 @@
         <ol id="other">
          <li class="repo">
            <a href="soft/home/" class="name-repo">Home</a>
-           <p class="desc-repo">A homepage without pub</p>
+           <p class="desc-repo">A homepage without pub.</p>
            <span class="gray">CSS</span>
          </li>
          <li class="repo">
            <a href="soft/calculs/" class="name-repo">Calculs</a>
-           <p class="desc-repo">A page for a school project</p>
+           <p class="desc-repo">A page for a school project.</p>
            <span class="gray">JavaScript</span>
           </li>
          <li class="repo">
            <a href="demo/countdown-page/" class="name-repo">Countdown</a>
-           <p class="desc-repo">A countdown</p>
+           <p class="desc-repo">A countdown.</p>
            <span class="gray">JavaScript</span>
           </li>
           <li class="repo">
            <a href="demo/greeting-birth/" class="name-repo">Greeting birth</a>
-           <p class="desc-repo">A page for birth</p>
+           <p class="desc-repo">A page for birth.</p>
            <span class="gray">JavaScript</span>
           </li>
          </ol>
