Change content, remove "Home" and "Calculs"

--- a/dev/index.html
+++ b/dev/index.html
@@ -12,7 +12,6 @@
         <meta name="twitter:image" content="http://cedced19.github.io/profile.png">
         <meta name="twitter:site" content="@cedced19">
         <meta name="twitter:author" content="@cedced19">
-        <meta name="author" content="Cedced19">
         <meta name="description" content="Cedced19's developer website. Node.js fan.">
         <meta name="keywords" content="Cedced19, Developer, Node, JS, HTML, CSS, JavaScript">
         <meta property="og:type" content="website">
@@ -45,9 +44,11 @@
             Few of them can be usefull...
         </p>
         <p>
-            He is a <a href="http://nodejs.org/">Node.js</a> fan
+            He is a fan of <a href="http://nodejs.org/">Node.js</a>.
         </p>
-        <p>You can follow Cedced19 on <a href="//twitter.com/cedced19">Twitter</a> or <a href="mailto:cedced19@gmail.com?subject=Hello.net&body=Hello">send me an email</a>.</p>
+        <p>
+            You can follow Cedced19 on <a href="//twitter.com/cedced19">Twitter</a> or <a href="mailto:cedced19@gmail.com?subject=Hello.net&body=Hello">send an email to him</a>.
+        </p>
 
         <h3>Repositories</h3>
         <ol id="repos">
@@ -56,16 +57,6 @@
 
         <h3>Other</h3>
         <ol id="other">
-         <li class="repo">
-           <a href="soft/home/" class="name-repo">Home</a>
-           <p class="desc-repo">A homepage without pub.</p>
-           <span class="gray">CSS</span>
-         </li>
-         <li class="repo">
-           <a href="soft/calculs/" class="name-repo">Calculs</a>
-           <p class="desc-repo">A page for a school project.</p>
-           <span class="gray">JavaScript</span>
-          </li>
          <li class="repo">
            <a href="demo/countdown-page/" class="name-repo">Countdown</a>
            <p class="desc-repo">A countdown.</p>
