--- a/dev/404.html
+++ b/dev/404.html
@@ -32,7 +32,7 @@
                     <div class="masthead animate">
                         <h1>404</h1>
                         <br>
-                        <h2>Oups. <a href="/" rel="home">Home ?</a></h2>
+                        <h2>Oops. <a href="/" rel="home">Home ?</a></h2>
                     </div>
         </header>
 
