Don't set useless id

--- a/dev/license/index.html
+++ b/dev/license/index.html
@@ -44,9 +44,9 @@
 
         <main class="content-wrap animate" role="main">
 
-            <h2 id="the-mit-license-mit">The MIT License (MIT)</h2>
+            <h2>The MIT License (MIT)</h2>
 
-            <h3 id="copyright-c-2014-cdric">Copyright (c) 2014 Cédric</h3>
+            <h3>Copyright (c) 2014 Cédric</h3>
 
             <p>Permission is hereby granted, free of charge, to any person obtaining a copy
                 of this software and associated documentation files (the “Software”), to deal
@@ -75,8 +75,8 @@
 
 
         <!-- build:js /scripts/scripts.js -->
-        <script type="text/javascript" src="scripts/jquery.min.js"></script>
-        <script type="text/javascript" src="scripts/header.js"></script>
+        <script type="text/javascript" src="../scripts/jquery.min.js"></script>
+        <script type="text/javascript" src="../scripts/header.js"></script>
         <!-- endbuild -->
 
     </body>
