Add Google Play link

--- a/dev/index.html
+++ b/dev/index.html
@@ -38,7 +38,7 @@
 
         <main class="content-wrap animate" role="main">
             <p>
-                Hi! 
+                Hi!
                 You're on Cedced19's site, here there are a lot of useless software!
                 Few of them can be usefull...
             </p>
@@ -46,7 +46,10 @@
                 He is a fan of <a href="http://nodejs.org/">Node.js</a>.
             </p>
             <p>
-                You can follow Cedced19 on <a href="//twitter.com/cedced19">Twitter</a> or <a href="mailto:cedced19@gmail.com?subject=Hello.net&body=Hello">send an email to him</a>.
+                He published also some applictions in <a href="https://play.google.com/store/apps/dev?id=8053368172585015347">Google Play</a>.
+            </p>
+            <p>
+                You can follow Cedced19 on <a href="//twitter.com/cedced19">Twitter</a> or <a href="mailto:cedced19@gmail.com">send an email to him</a>.
             </p>
 
             <h3>Repositories</h3>
