Add google play applications and update dependencies

--- a/dev/index.html
+++ b/dev/index.html
@@ -56,8 +56,22 @@
             </ol>
             <noscript><p>You had to enable Javascript to see this paragraph.</p></noscript>
 
-            <h3>Other</h3>
-            <ol id="other">
+            <h3>Google play applications</h3>
+            <ol id="google-plays">
+                <li class="repo">
+                    <a href="https://play.google.com/store/apps/details?id=io.github.cedced19.learnmemorymobile" class="name-repo">Learn Memory Mobile</a>
+                    <p class="desc-repo">Download your lessons to get them offline!</p>
+                    <span class="gray">JavaScript</span>
+                </li>
+                <li class="repo">
+                    <a href="https://play.google.com/store/apps/details?id=io.github.cedced19.learnmemorycreatormobile" class="name-repo">Learn Memory Creator Mobile</a>
+                    <p class="desc-repo">Create or update lessons and publish them in your Learn Memory server.</p>
+                    <span class="gray">JavaScript</span>
+                </li>
+            </ol>
+
+            <h3>Others</h3>
+            <ol id="others">
                 <li class="repo">
                     <a href="demo/countdown-page/" class="name-repo">Countdown</a>
                     <p class="desc-repo">A countdown.</p>
