Update SEO files, change order of the list, change nodesetup script, add a shortcut to gulp task

--- a/dev/index.html
+++ b/dev/index.html
@@ -42,19 +42,14 @@
                 Few of them can be usefull...
             </p>
             <p>
-                He is a fan of <a href="http://nodejs.org/">Node.js</a>.
+                I'm a fan of <a href="http://nodejs.org/">Node.js</a>.
             </p>
             <p>
-                He published also some applictions in <a href="https://play.google.com/store/apps/dev?id=8053368172585015347">Google Play</a>.
+                I published also some applictions in <a href="https://play.google.com/store/apps/dev?id=8053368172585015347">Google Play</a>.
             </p>
             <p>
                 You can follow Cedced19 on <a href="//twitter.com/cedced19">Twitter</a> or <a href="mailto:cedced19@gmail.com">send an email to him</a>.
             </p>
-
-            <h3>Repositories</h3>
-            <ol id="repos">
-            </ol>
-            <noscript><p>You had to enable Javascript to see this paragraph.</p></noscript>
 
             <h3>Google play applications</h3>
             <ol id="google-plays">
@@ -68,7 +63,32 @@
                     <p class="desc-repo">Create or update lessons and publish them in your Learn Memory server.</p>
                     <span class="gray">JavaScript</span>
                 </li>
+                <li class="repo">
+                    <a href="https://play.google.com/store/apps/details?id=io.github.cedced19.listodomobile" class="name-repo">Listodo Mobile</a>
+                    <p class="desc-repo">Listodo is a self-hosted website to save your todo list.</p>
+                    <span class="gray">JavaScript</span>
+                </li>
+                <li class="repo">
+                    <a href="https://play.google.com/store/apps/details?id=io.github.cedced19.tempspartour" class="name-repo">Temps par tour</a>
+                    <p class="desc-repo">A application to get quickly the time by turn.</p>
+                    <span class="gray">JavaScript</span>
+                </li>
+                <li class="repo">
+                    <a href="https://play.google.com/store/apps/details?id=io.github.cedced19.happymulti" class="name-repo">Happy Multi</a>
+                    <p class="desc-repo">Happy multi is a application to learn the multiplication tables.</p>
+                    <span class="gray">JavaScript</span>
+                </li>
+                <li class="repo">
+                    <a href="https://play.google.com/store/apps/details?id=io.github.cedced19.raisealarmmobile" class="name-repo">Raise Alarm</a>
+                    <p class="desc-repo">A apllication to raise the alarm with a simple button.</p>
+                    <span class="gray">JavaScript</span>
+                </li>
             </ol>
+
+            <h3>Repositories</h3>
+            <ol id="repos">
+            </ol>
+            <noscript><p>You had to enable Javascript to see this paragraph.</p></noscript>
 
             <h3>Others</h3>
             <ol id="others">
